
vim: spelllang=en spell tw=78

-------------------------------------------------------------------------------

Changes in 1.6.0:

* Added all native Ethernet drivers for kernels 5.14 and 6.1.
* Dropped support for kernels < 3.0.
* Allow to query the scanning progress via API.
* Added EoE set IP command via command-line-tool.

Changes since 1.5.2:

* Added feature flag API.
* Fixed FoE timeout calculation bug.

Changes in 1.5.2:

* API extensions (find the complete description in include/ecrt.h)
    * Added redundancy features; enable using --with-devices.
    * Re-designed and seamlessly integrated RTDM interface.
    * Added ecrt_sdo_request_index() method to change index and subindex.
    * Changed the data types of the shift times in ecrt_slave_config_dc()
      to int32_t to correctly display negative shift times.
    * Added API for querying CoE emergency requests.
    * Added interface to read/write register contents; re-worked register
      requests.
    * Added interface to select the reference clock and to sync to it.
    * Exported ecrt_domain_size() to userspace.
    * Added ecrt_slave_config_reg_so_entry_pos() to register non-unique
      PDO entries.
* Ethernet drivers
    * Added 8139too driver for 3.0, 3.2, 3.4.
    * Added r8169 driver for 2.6.36 (J. Kunz), 3.2 (J. Kunz), 3.4 (F. Pose).
    * Added e1000 driver for 3.0, 3.4.
    * Added e1000e driver for 3.2 (J. Kunz), 3.4 (F. Pose).
    * Added e100 driver for 3.0, 3.4.
    * Fixes regarding 8139too driver for 2.6.36.
    * Some fixes for all e1000 and e1000e drivers.
* General behaviour
    * Avoided semaphore locking from userspace/rtdm library: Implemented
      datagram ring instead of queue.
    * Assign SII to PDI during PREOP transition; Introduced
      --enable-sii-assign to switch this on.
    * Avoided re-allocating memory in userspace library implementations of
      ecrt_sdo_request_state() and in VoE handlers.
    * Send sync datagrams only if reference clock is found.